[gd_scene load_steps=40 format=3 uid="uid://c4ntu0tk2y6px"]

[ext_resource type="Script" path="res://Timer/timer_scene.gd" id="1_t4axc"]
[ext_resource type="PackedScene" uid="uid://coxax4yxcvi2g" path="res://UI/scene_changer.tscn" id="2_2npsy"]
[ext_resource type="Texture2D" uid="uid://3h0wruy5nkgq" path="res://Assets/Backgrounds/Pond.png" id="2_mm6cq"]
[ext_resource type="Texture2D" uid="uid://bw4ts212debkj" path="res://Assets/Backgrounds/BoardHanging1.png" id="4_k0hfj"]
[ext_resource type="Texture2D" uid="uid://bcog7a7do7v3" path="res://Assets/Backgrounds/Board1.png" id="4_vlt4w"]
[ext_resource type="Script" path="res://Timer/Work_Node.gd" id="5_0ievb"]
[ext_resource type="Script" path="res://Timer/Break_Node.gd" id="6_2aw1q"]
[ext_resource type="PackedScene" uid="uid://ck1v1wt2aq572" path="res://rewards_notification.tscn" id="6_fq5j0"]
[ext_resource type="Script" path="res://Timer/Work_Setup_Display.gd" id="6_ionkt"]
[ext_resource type="PackedScene" uid="uid://cpnid0qnob4p8" path="res://Timer/Timer Settings/time_slots.tscn" id="7_1qcq2"]
[ext_resource type="Script" path="res://Timer/Break_Setup_Display.gd" id="8_k8a8m"]
[ext_resource type="Script" path="res://Timer/end_confirm_node.gd" id="8_nn460"]
[ext_resource type="Texture2D" uid="uid://c50aw2ixftjmo" path="res://Assets/Icons/NormalTimer.png" id="12_7l5ml"]
[ext_resource type="Texture2D" uid="uid://dwgsj5nh8k1tl" path="res://Assets/Icons/PomodoroTimer.png" id="13_edkvx"]
[ext_resource type="Texture2D" uid="uid://bqf7mghc5y7tw" path="res://Assets/Backgrounds/EndTimer.png" id="13_nrjq2"]

[sub_resource type="Theme" id="Theme_1yq83"]
Label/font_sizes/font_size = 100

[sub_resource type="Theme" id="Theme_6jfhn"]
Button/constants/h_separation = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x1jeb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b34mp"]

[sub_resource type="LabelSettings" id="LabelSettings_8jonf"]
font_size = 100

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ul5qe"]

[sub_resource type="Theme" id="Theme_kx6gu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bb3gm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7s7s1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0n10n"]

[sub_resource type="ButtonGroup" id="ButtonGroup_7h141"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_guu32"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pmqso"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s843l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m2jvj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ikrqg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvoij"]
bg_color = Color(0, 0, 0, 0.227451)

[sub_resource type="Theme" id="Theme_feeyw"]
OptionButton/constants/h_separation = 4
OptionButton/styles/normal = SubResource("StyleBoxFlat_hvoij")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yl5ru"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lo4bj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jybt6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mwt4y"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hac6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cq1ev"]

[node name="Timer_Scene" type="Node2D"]
script = ExtResource("1_t4axc")

[node name="Top_Layer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="Top_Layer"]
offset_right = 1080.0
offset_bottom = 1920.0
scale = Vector2(0.997596, 0.998961)
texture = ExtResource("2_mm6cq")

[node name="Label" type="Label" parent="Top_Layer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -308.5
offset_right = 308.5
offset_bottom = 137.0
grow_horizontal = 2
theme = SubResource("Theme_1yq83")
text = "Timer Scene"
metadata/_edit_use_anchors_ = true

[node name="Scene_Changer" parent="Top_Layer" instance=ExtResource("2_2npsy")]

[node name="Mission_Board" type="TextureRect" parent="Top_Layer"]
offset_left = 286.0
offset_top = 707.0
offset_right = 830.0
offset_bottom = 942.0
texture = ExtResource("4_k0hfj")
expand_mode = 1
stretch_mode = 5

[node name="Break_Board" type="TextureRect" parent="Top_Layer"]
offset_left = 278.0
offset_top = 500.0
offset_right = 822.0
offset_bottom = 735.0
texture = ExtResource("4_k0hfj")
expand_mode = 1
stretch_mode = 5

[node name="Timer_Board" type="TextureRect" parent="Top_Layer"]
offset_left = 163.0
offset_top = 300.0
offset_right = 928.0
offset_bottom = 518.0
texture = ExtResource("4_vlt4w")
expand_mode = 1
stretch_mode = 5

[node name="Rewards_Notification" parent="." instance=ExtResource("6_fq5j0")]
visible = false
offset_left = 1.0
offset_top = 1621.0
offset_right = 1.0
offset_bottom = 1621.0

[node name="Work_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_0ievb")

[node name="Work_Timer" type="Timer" parent="Work_Node"]
process_callback = 0
wait_time = 20.0

[node name="Work_Label" type="Label" parent="Work_Node"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 346.0
offset_top = 382.0
offset_right = 742.0
offset_bottom = 519.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Work_Title" type="Label" parent="Work_Node"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 428.0
offset_top = 305.0
offset_right = 652.0
offset_bottom = 415.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Timer"
vertical_alignment = 1

[node name="Work_Setup_Display" type="Control" parent="Work_Node"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 540.0
offset_top = 450.0
offset_right = 540.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_ionkt")

[node name="Add_Work" type="Button" parent="Work_Node/Work_Setup_Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 157.0
offset_top = -55.0
offset_right = 203.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
text = "+"

[node name="Subtract_Work" type="Button" parent="Work_Node/Work_Setup_Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -62.0
offset_right = -167.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
text = "-"

[node name="Hours_Work" parent="Work_Node/Work_Setup_Display" instance=ExtResource("7_1qcq2")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -55.0
offset_right = -63.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
alignment = 1

[node name="Minutes_Work" parent="Work_Node/Work_Setup_Display" instance=ExtResource("7_1qcq2")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -55.0
offset_right = 46.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
alignment = 1

[node name="Seconds_Work" parent="Work_Node/Work_Setup_Display" instance=ExtResource("7_1qcq2")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 63.5
offset_top = -55.0
offset_right = 156.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
text = "03"
alignment = 1

[node name="Seperator1_Work" type="Label" parent="Work_Node/Work_Setup_Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.5
offset_top = -73.5
offset_right = 68.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
text = ":"
label_settings = SubResource("LabelSettings_8jonf")
horizontal_alignment = 1

[node name="Seperator2_Work" type="Label" parent="Work_Node/Work_Setup_Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -73.5
offset_right = -35.0
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
text = ":"
label_settings = SubResource("LabelSettings_8jonf")
horizontal_alignment = 1

[node name="Break_Node" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_2aw1q")

[node name="Break_Timer" type="Timer" parent="Break_Node"]
process_callback = 0
wait_time = 20.0

[node name="Break_Label" type="Label" parent="Break_Node"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 342.0
offset_top = 613.0
offset_right = 738.0
offset_bottom = 750.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "00:00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Break_Title" type="Label" parent="Break_Node"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 457.0
offset_top = 565.0
offset_right = 627.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
text = "Break"
horizontal_alignment = 1

[node name="Break_Setup_Display" type="Control" parent="Break_Node"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 540.0
offset_top = 678.0
offset_right = 540.0
offset_bottom = 678.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_k8a8m")

[node name="Add_Break" type="Button" parent="Break_Node/Break_Setup_Display"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 123.0
offset_top = -39.0
offset_right = 157.0
offset_bottom = 44.0
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
text = "+"

[node name="Subtract_Break" type="Button" parent="Break_Node/Break_Setup_Display"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -49.0
offset_right = -124.0
offset_bottom = 34.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_6jfhn")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
text = "-"

[node name="Hours_Break" parent="Break_Node/Break_Setup_Display" instance=ExtResource("7_1qcq2")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -41.5
offset_right = -50.0
offset_bottom = 41.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")

[node name="Minutes_Break" parent="Break_Node/Break_Setup_Display" instance=ExtResource("7_1qcq2")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -41.5
offset_right = 34.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")

[node name="Seconds_Break" parent="Break_Node/Break_Setup_Display" instance=ExtResource("7_1qcq2")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -41.5
offset_right = 119.0
offset_bottom = 41.5
grow_vertical = 2
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_x1jeb")
theme_override_styles/focus = SubResource("StyleBoxEmpty_b34mp")
text = "03"

[node name="Seperator1_Break" type="Label" parent="Break_Node/Break_Setup_Display"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -47.0
offset_right = -33.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = ":"
horizontal_alignment = 1

[node name="Seperator2_Break" type="Label" parent="Break_Node/Break_Setup_Display"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 35.0
offset_top = -47.0
offset_right = 52.0
offset_bottom = 36.0
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = ":"
horizontal_alignment = 1

[node name="Start_Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 464.0
offset_top = 1622.0
offset_right = 706.0
offset_bottom = 1767.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.169297
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxEmpty_ul5qe")
text = "Start"

[node name="Normal_Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 443.0
offset_top = 50.0
offset_right = 543.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kx6gu")
theme_override_constants/icon_max_width = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_bb3gm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7s7s1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_0n10n")
toggle_mode = true
button_group = SubResource("ButtonGroup_7h141")
icon = ExtResource("12_7l5ml")

[node name="Pomodoro_Button" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 536.0
offset_top = 50.0
offset_right = 636.0
offset_bottom = 150.0
grow_vertical = 2
theme_override_constants/icon_max_width = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_guu32")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pmqso")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_s843l")
toggle_mode = true
icon = ExtResource("13_edkvx")

[node name="Pause_Button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 459.0
offset_top = 1093.0
offset_right = 612.0
offset_bottom = 1170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxEmpty_m2jvj")
text = "Pause"

[node name="End_Button" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 493.0
offset_top = 1614.0
offset_right = 682.0
offset_bottom = 1759.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.169297
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxEmpty_ikrqg")
text = "End"

[node name="Missions_Option" type="OptionButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 410.0
offset_top = 870.0
offset_right = 710.0
offset_bottom = 910.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_feeyw")
theme_override_font_sizes/font_size = 25
item_count = 1
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 452.0
offset_top = 783.0
offset_right = 637.0
offset_bottom = 852.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Mission"

[node name="End_Confirm_Node" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 540.0
offset_top = 1000.0
offset_right = 540.0
offset_bottom = 1000.0
script = ExtResource("8_nn460")

[node name="Background" type="TextureRect" parent="End_Confirm_Node"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_nrjq2")
expand_mode = 1

[node name="Cancel_Button" type="Button" parent="End_Confirm_Node/Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 74.0
offset_top = -99.0
offset_right = 209.0
offset_bottom = -36.0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_yl5ru")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lo4bj")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jybt6")

[node name="Confirm_Button" type="Button" parent="End_Confirm_Node/Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -221.0
offset_top = -102.0
offset_right = -58.0
offset_bottom = -39.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_mwt4y")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8hac6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cq1ev")

[connection signal="timeout" from="Work_Node/Work_Timer" to="." method="_on_work_timer_timeout"]
[connection signal="timeout" from="Work_Node/Work_Timer" to="Break_Node" method="_on_work_timer_timeout"]
[connection signal="pressed" from="Work_Node/Work_Setup_Display/Add_Work" to="Work_Node" method="_on_add_pressed"]
[connection signal="pressed" from="Work_Node/Work_Setup_Display/Subtract_Work" to="Work_Node" method="_on_subtract_pressed"]
[connection signal="text_submitted" from="Work_Node/Work_Setup_Display/Hours_Work" to="Work_Node" method="_on_hours_text_submitted"]
[connection signal="text_submitted" from="Work_Node/Work_Setup_Display/Minutes_Work" to="Work_Node" method="_on_minutes_text_submitted"]
[connection signal="text_submitted" from="Work_Node/Work_Setup_Display/Seconds_Work" to="Work_Node" method="_on_seconds_text_submitted"]
[connection signal="timeout" from="Break_Node/Break_Timer" to="." method="_on_break_timer_timeout"]
[connection signal="pressed" from="Break_Node/Break_Setup_Display/Add_Break" to="Break_Node" method="_on_add_pressed"]
[connection signal="pressed" from="Break_Node/Break_Setup_Display/Subtract_Break" to="Break_Node" method="_on_subtract_pressed"]
[connection signal="text_submitted" from="Break_Node/Break_Setup_Display/Hours_Break" to="Break_Node" method="_on_hours_text_submitted"]
[connection signal="text_submitted" from="Break_Node/Break_Setup_Display/Minutes_Break" to="Break_Node" method="_on_minutes_text_submitted"]
[connection signal="text_submitted" from="Break_Node/Break_Setup_Display/Seconds_Break" to="Break_Node" method="_on_seconds_text_submitted"]
[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Start_Button" to="Work_Node" method="_on_start_pressed"]
[connection signal="pressed" from="Start_Button" to="Break_Node" method="_on_start_pressed"]
[connection signal="pressed" from="Normal_Button" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="Pomodoro_Button" to="." method="_on_pomodoro_pressed"]
[connection signal="pressed" from="Pause_Button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="End_Button" to="." method="_on_end_button_pressed"]
[connection signal="item_selected" from="Missions_Option" to="." method="_on_missions_option_item_selected"]
[connection signal="pressed" from="End_Confirm_Node/Background/Cancel_Button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="End_Confirm_Node/Background/Confirm_Button" to="." method="_on_confirm_button_pressed"]
